tests/spec/fail/builtin_named_duplicate.aja
import (
    "rand"
)

print(rand.int(1, min = 1))
